--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,12 @@
 .App-link {
   color: #09d3ac;
 }
+
+.SecondPart {
+  text-align: center;
+  background: #555555;
+}
+
+.FillerText {
+  font-size: calc(15px + 5vmin);
+}
